--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -24,26 +24,154 @@
                 <source>List of all essays compiled in this resource</source>
                 <target>Liste aller Aufsätze, die in dieser Ressource verzeichnet sind</target>
             </trans-unit>
-            <!-- Object: VolumeRelation -->
-            <trans-unit id="object.volumeRelation.type.volumeRelation" resname="object.volumeRelation.type.volumeRelation" approved="yes">
-                <source>Volume relation</source>
-                <target>Bandrelation</target>
+            <!-- Object: PublicationRelation -->
+            <trans-unit id="object.publicationRelation.type.publicationRelation" resname="object.publicationRelation.type.publicationRelation" approved="yes">
+                <source>Publication relation</source>
+                <target>Publikationsrelation</target>
             </trans-unit>
-            <trans-unit id="object.volumeRelation.volume" resname="object.volumeRelation.volume" approved="yes">
+            <trans-unit id="object.publicationRelation.volume" resname="object.publicationRelation.volume" approved="yes">
                 <source>Volume</source>
                 <target>Band</target>
             </trans-unit>
-            <trans-unit id="object.volumeRelation.volume.description" resname="object.volumeRelation.volume.description" approved="yes">
+            <trans-unit id="object.publicationRelation.volume.description" resname="object.publicationRelation.volume.description" approved="yes">
                 <source>Volume to relate to the record</source>
                 <target>Band, der mit dem Eintrag verknüpft werden soll</target>
             </trans-unit>
-            <trans-unit id="object.volumeRelation.volumePosition" resname="object.volumeRelation.volumePosition" approved="yes">
-                <source>Volume position</source>
-                <target>Stelle im Band</target>
+            <trans-unit id="object.publicationRelation.essay" resname="object.publicationRelation.essay" approved="yes">
+                <source>Essay</source>
+                <target>Aufsatz</target>
             </trans-unit>
-            <trans-unit id="object.volumeRelation.volumePosition.description" resname="object.volumeRelation.volumePosition.description" approved="yes">
-                <source>Page number or other location in the volume to relate to</source>
-                <target>Seitenangabe oder andere Stelle im Band, auf den verwieden wird</target>
+            <trans-unit id="object.publicationRelation.essay.description" resname="object.publicationRelation.essay.description" approved="yes">
+                <source>Essay to relate to the record</source>
+                <target>Aufsatz, der mit dem Eintrag verknüpft werden soll</target>
+            </trans-unit>
+            <trans-unit id="object.publicationRelation.position" resname="object.publicationRelation.position" approved="yes">
+                <source>Position</source>
+                <target>Stelle</target>
+            </trans-unit>
+            <trans-unit id="object.publicationRelation.position.description" resname="object.publicationRelation.position.description" approved="yes">
+                <source>Page number or other location in the volume or essay to relate to</source>
+                <target>Seitenangabe oder andere Stelle im Band or Aufsatz, auf den verwieden wird</target>
+            </trans-unit>
+            <!-- Object: Volume -->
+            <trans-unit id="object.volume" resname="object.volume" approved="yes">
+                <source>Volume</source>
+                <target>Band</target>
+            </trans-unit>
+            <trans-unit id="object.volume.title" resname="object.volume.title" approved="yes">
+                <source>Title</source>
+                <target>Titel</target>
+            </trans-unit>
+            <trans-unit id="object.volume.title.description" resname="object.volume.title.description" approved="yes">
+                <source>Name of this volume</source>
+                <target>Name dieses Bandes</target>
+            </trans-unit>
+            <trans-unit id="object.volume.essay" resname="object.volume.essay" approved="yes">
+                <source>Essay</source>
+                <target>Aufsatz</target>
+            </trans-unit>
+            <trans-unit id="object.volume.essay.description" resname="object.volume.essay.description" approved="yes">
+                <source>List of essays that are part of this volume</source>
+                <target>Liste der Aufsätze, die in diesem Band enthalten sind</target>
+            </trans-unit>
+            <trans-unit id="object.volume.asVolumeOfPublicationRelation" resname="object.volume.asVolumeOfPublicationRelation" approved="yes">
+                <source>Usage as volume of a publication relation</source>
+                <target>Verwendung als Band einer Publikationsrelation</target>
+            </trans-unit>
+            <trans-unit id="object.volume.asVolumeOfPublicationRelation.description" resname="object.volume.asVolumeOfPublicationRelation.description" approved="yes">
+                <source>List of publication relations that use this volume</source>
+                <target>Liste der Publikationsrelationen, die diesen Band verwenden</target>
+            </trans-unit>
+            <!-- Object: Essay -->
+            <trans-unit id="object.essay" resname="object.essay" approved="yes">
+                <source>Essay</source>
+                <target>Aufsatz</target>
+            </trans-unit>
+            <trans-unit id="object.essay.parentVolume" resname="object.essay.parentVolume" approved="yes">
+                <source>Parent volume</source>
+                <target>Übergeordneter Band</target>
+            </trans-unit>
+            <trans-unit id="object.essay.parentVolume.description" resname="object.essay.parentVolume.description" approved="yes">
+                <source>Volume that this essay is part of</source>
+                <target>Band, zu dem dieser Aufsatz gehört</target>
+            </trans-unit>
+            <trans-unit id="object.essay.parentEssay" resname="object.essay.parentEssay" approved="yes">
+                <source>Parent essay</source>
+                <target>Übergeordneter Aufsatz</target>
+            </trans-unit>
+            <trans-unit id="object.essay.parentEssay.description" resname="object.essay.parentEssay.description" approved="yes">
+                <source>Essay that this essay is part of</source>
+                <target>Aufsatz, zu dem dieser Aufsatz gehört</target>
+            </trans-unit>
+            <trans-unit id="object.essay.title" resname="object.essay.title" approved="yes">
+                <source>Title</source>
+                <target>Titel</target>
+            </trans-unit>
+            <trans-unit id="object.essay.title.description" resname="object.essay.title.description" approved="yes">
+                <source>Name of this essay</source>
+                <target>Name dieses Aufsatzes</target>
+            </trans-unit>
+            <trans-unit id="object.essay.essay" resname="object.essay.essay" approved="yes">
+                <source>Essay</source>
+                <target>Aufsatz</target>
+            </trans-unit>
+            <trans-unit id="object.essay.essay.description" resname="object.essay.essay.description" approved="yes">
+                <source>List of essays that are part of this essay</source>
+                <target>Liste der Aufsätze, die in diesem Aufsatz enthalten sind</target>
+            </trans-unit>
+            <trans-unit id="object.essay.asEssayOfPublicationRelation" resname="object.essay.asEssayOfPublicationRelation" approved="yes">
+                <source>Usage as essay of a publication relation</source>
+                <target>Verwendung als Aufsatz einer Publikationsrelation</target>
+            </trans-unit>
+            <trans-unit id="object.essay.asEssayOfPublicationRelation.description" resname="object.essay.asEssayOfPublicationRelation.description" approved="yes">
+                <source>List of publication relations that use this essay</source>
+                <target>Liste der Publikationsrelationen, die diesen Aufsatz verwenden</target>
+            </trans-unit>
+            <!-- Object: Extent -->
+            <trans-unit id="object.extent.type.doi" resname="object.extent.type.doi" approved="yes">
+                <source>DOI</source>
+                <target>DOI</target>
+            </trans-unit>
+            <trans-unit id="object.extent.type.urn" resname="object.extent.type.urn" approved="yes">
+                <source>Further URN (includes Handle)</source>
+                <target>Andere URN (inklusive Handle)</target>
+            </trans-unit>
+            <trans-unit id="object.extent.type.edition" resname="object.extent.type.edition" approved="yes">
+                <source>Edition</source>
+                <target>Ausgabe</target>
+            </trans-unit>
+            <trans-unit id="object.extent.type.volume" resname="object.extent.type.volume" approved="yes">
+                <source>Volume</source>
+                <target>Band</target>
+            </trans-unit>
+            <trans-unit id="object.extent.type.issue" resname="object.extent.type.issue" approved="yes">
+                <source>Issue</source>
+                <target>Heftnummer</target>
+            </trans-unit>
+            <trans-unit id="object.extent.type.issn" resname="object.extent.type.issn" approved="yes">
+                <source>ISSN</source>
+                <target>ISSN</target>
+            </trans-unit>
+            <trans-unit id="object.extent.type.isbn" resname="object.extent.type.isbn" approved="yes">
+                <source>ISBN</source>
+                <target>ISBN</target>
+            </trans-unit>
+            <!-- Object: LabelTag -->
+            <trans-unit id="object.labelTag.asLabelOfVolume" resname="object.labelTag.asLabelOfVolume" approved="yes">
+                <source>Usage as label of a volume</source>
+                <target>Verwendung als Label eines Bandes</target>
+            </trans-unit>
+            <trans-unit id="object.labelTag.asLabelOfVolume.description" resname="object.labelTag.asLabelOfVolume.description" approved="yes">
+                <source>List of volumes that use this tag as a label</source>
+                <target>Liste der Bände, die dieses Schlagwort als Label verwenden</target>
+            </trans-unit>
+            <trans-unit id="object.labelTag.asLabelOfEssay" resname="object.labelTag.asLabelOfEssay" approved="yes">
+                <source>Usage as label of a essay</source>
+                <target>Verwendung als Label eines Aufsatzes</target>
+            </trans-unit>
+            <trans-unit id="object.labelTag.asLabelOfEssay.description" resname="object.labelTag.asLabelOfEssay.description" approved="yes">
+                <source>List of essays that use this tag as a label</source>
+                <target>Liste der Aufsätze, die dieses Schlagwort als Label verwenden</target>
             </trans-unit>
         </body>
     </file>
